YH Fixed layout changes on Optionalextraslist

--- a/templates/quotepad/optionalextra_list.html
+++ b/templates/quotepad/optionalextra_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container component-details-container">
+<div class="container-fluid component-details-container">
     <div class="row">
         <div class="col-12">
             <h2>List of Optional Extras</h2>
@@ -16,13 +16,13 @@
 
     <div class="row price-list-headings">
         <div class="col-6">
-            <h4>Product Name</h4>
+            <h5>Product Name</h5>
         </div>
         <div class="col-4">
-            <h4>Price</h4>
+            <h5>Price</h5>
         </div>
         <div class="col-2">
-            <h4>Action</h4>
+            <h5>Action</h5>
         </div>
     </div>
 
