--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,19 @@
         <li class="nav-item">
           <a class="nav-link" href="/optionalextralist">Optional Extras<span class="sr-only">(current)</span></a>
         </li>
+        <span class="nav-item dropdown">
+          <a class="nav-link dropdown dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Customer Comms
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/ssListCustomersForComms_yh/Installation%20Notification%20Comms/">Survey Booked Notification</a>
+            <a class="dropdown-item" href="/ssListCustomersForComms_yh/Installation%20Notification%20Comms/">Installation Notification</a>
+            <a class="dropdown-item" href="/ssListCustomersForComms_yh/Installation%20Notification%20Comms/">Quote Follow-up Notification</a>
+            <a class="dropdown-item" href="/ssListCustomersForComms_yh/Installation%20Notification%20Comms/">Boiler Service Notification</a>
+            <a class="dropdown-item" href="/ssListCustomersForComms_yh/Installation%20Notification%20Comms/">Bespoke Offers Notification</a>
+          </div>
+        </span>
         {% endif %}
         {% if request.session.created_quote %}
           {% if request.user|has_group:"WESTCHEM" %}
@@ -116,6 +129,7 @@
           <a class="dropdown-item" href="/changepassword">Change Password</a>
           <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
           <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
+          <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
           <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
             <div class="dropdown-divider"></div>
