--- a/templates/base.html
+++ b/templates/base.html
@@ -128,9 +128,11 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
           <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
-          <a class="dropdown-item" href="/changepassword">Change Password</a>
-          <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
-          <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
+          {% if request.user.username == 'yourheatx' %}
+            <a class="dropdown-item" href="/changepassword">Change Password</a>
+            <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
+            <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
+          {% endif %}
           <a class="dropdown-item" href="/ssPostSurveyQuestions">Post Survey Update</a>
           <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
