--- a/templates/pdf/user_yourheatx/customer_comms/Our Priority Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Our Priority Comms.html
@@ -27,7 +27,7 @@
 <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
 
 <p class="all_text">
-    We tried calling today to discuss the quotation we gave on {{ quotation_date|date:"D j F Y" }}. We'd like to know if you had any questions relating to the quotation, or if there was anything further we could do to support you at this stage as we'd love to have you on board as a customer.
+    We tried calling today to discuss the quotation we gave on {{ survey_date|date:"D j F Y" }}. We'd like to know if you had any questions relating to the quotation, or if there was anything further we could do to support you at this stage as we'd love to have you on board as a customer.
     If you'd like to arrange a convenient time for us to give you a call, simply reply to this email and one of our team will be happy to schedule a call.
 </p>
 
