--- a/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Survey Booked Comms.html
@@ -28,7 +28,7 @@
 
 <p class="all_text">
     Our surveyor is looking forward to visiting you to provide a free, no-obligation quote to replace your boiler.
-    {{ engineer_name }} is booked to arrive at your property on {{quotation_date|date:"D j F Y"}} between 08:00-10:00
+    {{ surveyor_name }} is booked to arrive at your property on {{survey_date|date:"D j F Y"}} between 08:00-10:00
 </p>
 
 <p class="all_text">
