--- a/templates/yourheat/pages/customer_comms_landing_page.html
+++ b/templates/yourheat/pages/customer_comms_landing_page.html
@@ -23,7 +23,8 @@
             <a class="btn boilerbtn btn-warning" href="{% url 'ssListCustomersForComms_yh' 'Survey Booked Comms' customer_id  %}">Survey Booked Comms</a>
         </div>
         <div class = "col-8">    
-            <i>Dear ____, Our surveyor is looking forward to visiting you to provide a free, no-obligation quote...</i>
+            <i>Dear ____, Our surveyor is looking forward to visiting you to provide a free, no-obligation quote...</i><br>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [ Surveyor Name ] [ Survey Date ]</p>
         </div>
     </div>   
     <div class="row comms-row">
@@ -32,6 +33,7 @@
         </div>
         <div class = "col-8">    
             <i>Dear ____, We've been trying to contact you to discuss the quotation we gave you recently...</i>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name]</p>
         </div>
     </div>        
     <div class="row comms-row">
@@ -40,6 +42,7 @@
         </div>
         <div class = "col-8">  
             <i>Dear ____, We tried calling today to discuss the quotation we gave on...</i>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Survey Date]</p>
         </div>
     </div>
     <div class="row comms-row">
@@ -48,6 +51,7 @@
         </div>
         <div class = "col-8">
             <i>Dear ____, Thank you for choosing Your Heat as your trusted boiler installation specialist...</i>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Installation Date] [Brand] [Engineer Name]</p>
         </div>
     </div>
     <div class="row comms-row">
@@ -56,6 +60,7 @@
         </div>
         <div class = "col-8">    
             <i>Dear ____, Thank you for choosing Your Heat to look after the installation of your new boiler...</i>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p>
         </div>
     </div>        
     <div class="row comms-row">
