--- a/templates/yourheat/pages/list_comms_data.html
+++ b/templates/yourheat/pages/list_comms_data.html
@@ -22,13 +22,13 @@
     <h7>Email</h7>
     </div>
     <div class = "col-1">
-    <h7>Install Date</h7>
+    <h7>Survey Date</h7>
     </div>
     <div class = "col-1">
-        <h7>Quote Date</h7>
+    <h7>Install Date</h7>
     </div>
-    <div class = "col-2">
-        <h7>Engineer</h7>
+    <div class = "col-3">
+        <h7>Surveyor / Engineer</h7>
     </div>
     <div class = "col-2">
         <h7>Brand</h7>
@@ -58,17 +58,17 @@
     </div>
     <div class = "col-1">
         {% if customer_comms.already_sent %}<del>{% endif %}
-        <h7>{{ customer_comms.installation_date }}</h7>
+        <h7>{{ customer_comms.survey_date }}</h7>
         {% if customer_comms.already_sent %}</del>{% endif %}
     </div>
     <div class = "col-1">
         {% if customer_comms.already_sent %}<del>{% endif %}
-        <h7>{{ customer_comms.quotation_date }}</h7>
+        <h7>{{ customer_comms.installation_date }}</h7>
         {% if customer_comms.already_sent %}</del>{% endif %}
-    </div>
-    <div class = "col-2">
+    </div>    
+    <div class = "col-3">
         {% if customer_comms.already_sent %}<del>{% endif %}
-        <h7>{{ customer_comms.engineer_email|truncatechars:25 }}</h7>
+        <h7>{{ customer_comms.surveyor_email|truncatechars:25 }} / {{ customer_comms.engineer_email|truncatechars:25 }}</h7>
         {% if customer_comms.already_sent %}</del>{% endif %}
     </div>
     <div class = "col-2">
