YH Fixed Changes on page for quotegenerated.

--- a/templates/yourheat/pages/quote_emailed.html
+++ b/templates/yourheat/pages/quote_emailed.html
@@ -4,13 +4,13 @@
 
 <div class="container">
 
-    <h4>Quote Updated on Smartsheet</h4>
+    <h4>Quote Email</h4>
     <a class="btn btn-secondary" href="/home/">Return to Dashboard</a>
 
 </div>
 
 <script>
-    all_good("Quote processing", "The quote details have been updated on Smartsheet.", "quoteready_yh/")
+    all_good("Email processing", "Your quote has been sent to the customer's email address.", "quoteready_yh/")
 </script>
 
 
